# Construction-Party

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg.json
data/: test.ps
data/models/: figure_box.mtl  figure_cone.mtl  figure_cylinder.mtl  figure_sphere.mtl  scene.blend  scene.mtl  scene_table.mtl  scene_walls.mtl  test.mtl
data/music/: license.txt
data/shaders/: debug_draw.ps  debug_draw.vs  lit_generic.ps  lit_generic.vs  test.vs  ui_base.ps  ui_base.vs
data/textures/scene/: license.txt
data/textures/ui/: ui_button_template.pdn  ui_star.pdn
src/client/: CMakeLists.txt  camera.cpp  camera.h  client_game.cpp  gameui.cpp  gameui.h  imgui_impl_engine.cpp  imgui_impl_engine.h  ui_menu.cpp  ui_menu.h
src/engine/: CMakeLists.txt  debugrender.cpp  debugrender.h  engine.cpp  engine.h  engine_main.cpp  engine_main.h  entity.cpp  entity.h  filesystem.cpp  filesystem.h  gl_shared.cpp  gl_shared.h  gpu_buffer.cpp  gpu_buffer.h  iengine.cpp  iengine.h  ientity.cpp  ientity.h  ifilesystem.h  ilogger.h  irender.h  logger.cpp  modelsystem.cpp  modelsystem.h  render.cpp  render.h  render_shared.h  renderdevice.cpp  renderdevice.h  shader.cpp  shader.h  shadersystem.cpp  shadersystem.h  soundsystem.cpp  soundsystem.h  texture2d.cpp  texture2d.h  texturesmanager.cpp  texturesmanager.h  (+2 more)
src/game_exe/: CMakeLists.txt  main.cpp
src/game_shared/: baseentity.cpp  baseentity.h
src/server/: CMakeLists.txt  physics_body.cpp  physics_body.h  physics_world.cpp  physics_world.h  player.cpp  player.h  server_entity.cpp  server_entity.h  server_main.cpp
vcpkg_triplets/: x64-windows-custom.cmake  x86-windows-custom.cmake
