cmake_minimum_required(VERSION 3.19)

project(game_exe)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/$<0:>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/$<0:>")

list(APPEND EXE_SOURCES
   "main.cpp"
)

add_executable(game WIN32 ${EXE_SOURCES})



install( TARGETS game DESTINATION ${CMAKE_INSTALL_PREFIX} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )