cmake_minimum_required(VERSION 3.19)

project(game_exe)

list(APPEND EXE_SOURCES
   "main.cpp"
)

add_executable(game WIN32 ${EXE_SOURCES})

set_property(TARGET game PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")

install( TARGETS game DESTINATION ${CMAKE_INSTALL_PREFIX} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )